# orocos_kdl-release

./: CMakeLists.txt  bloom.conf  debian.store  package.xml  patches.conf  stack.xml
debian/: changelog  control  copyright  files  gbp.conf  rules
debian/patches/: debian-changes
debian/ros-groovy-orocos-kdl/DEBIAN/: control  md5sums  shlibs
debian/ros-groovy-orocos-kdl/opt/ros/groovy/lib/: liborocos-kdl.so.1.1  liborocos-kdl.so.1.1.99
debian/ros-groovy-orocos-kdl/opt/ros/groovy/lib/pkgconfig/: orocos-kdl.pc
debian/ros-groovy-orocos-kdl/opt/ros/groovy/share/orocos-kdl/: orocos-kdl-config.cmake
kdl/: package.xml
orocos_kdl/: CMakeLists.txt  KDLConfig.cmake.in  package.xml
orocos_kinematics_dynamics/: package.xml
python_orocos_kdl/: CMakeLists.txt  package.xml  setup.py
