<package>
  <name>kdl</name>
  <version>1.1.99</version>
  <description>
    This package contains a recent version of the Kinematics and Dynamics Library (KDL), distributed by the Orocos Project. It is a meta-package that depends on orocos_kdl which contains the c++ version and python_orocos_kdl which contains the generated python bindings
  </description>
  <maintainer email="ruben.smits@intermodalics.eu">Ruben Smits</maintainer>

  <license>LGPL</license>

  <url type="website">http://www.orocos.org/kdl</url>

  <author>Ruben Smits</author>
  <author>Erwin Aertbelien</author>
  <author>Orocos Developers</author>

  <export>
    <metapackage/>
  </export>

  <run_depend>orocos_kdl</run_depend>
  <run_depend>python_orocos_kdl</run_depend>
</package>
