<package>
  <name>python_orocos_kdl</name>
  <version>1.1.99</version>
  <description>python_orocos_kdl</description>
  <maintainer email="ruben.smits@intermodalics.eu">Ruben Smits</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/python_orocos_kdl</url>

  <author>Ruben Smits</author>

  <build_depend>Orocos-KDL</build_depend>
  <run_depend>Orocos-KDL</run_depend>
  <test_depend>Orocos-KDL</test_depend>
</package>
