<package>
  <name>python_orocos_kdl</name>
  <version>1.1.99</version>
  <description>python_orocos_kdl</description>
  <maintainer email="ruben.smits@intermodalics.eu">Ruben Smits</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/python_orocos_kdl</url>

  <author>Ruben Smits</author>

  <build_depend>orocos_kdl</build_depend>
  <run_depend>orocos_kdl</run_depend>
  <test_depend>orocos_kdl</test_depend>
</package>
